force-app/main/default/objects/inspire1__Resource_Attribute__c/inspire1__Resource_Attribute__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - Captures attributes that can be assigned to a resource such as skill, expertise, certification, geographic region, etc.</description>
    <label>Resource Attribute</label>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>