force-app/main/default/objects/inspire1__Resource_Attribute__c/fields/inspire1__Description__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Description__c</fullName>
    <description>Description of the attribute.</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>