force-app/main/default/objects/inspire1__Resource_Attribute__c/fields/inspire1__Type__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Type__c</fullName>
    <description>Defines the type of attribute</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Job Title</fullName>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Skill</fullName>
                <default>true</default>
                <label>Skill</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Expertise</fullName>
                <isActive>false</isActive>
                <label>Expertise</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>