force-app/main/default/objects/inspire1__Resource_Attribute__c/fields/inspire1__Type_Text__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Type_Text__c</fullName>
    <formula>TEXT(inspire1__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Text</label>
    <type>Text</type>
</CustomField>