force-app/main/default/objects/inspire1__Resource_Attribute__c/listViews/inspire1__All.listView-meta.xml
<ListView>
    <fullName>inspire1__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>